feat: Finalized layouts

--- a/post-four.html
+++ b/post-four.html
@@ -18,7 +18,8 @@
         <hr>
         <main>
             <section class="data">
-                By Chris Shin <br>
+                By Mr. Chris Shin <br>
+                Full-Stack Developer <br>
                 October 20, 2021 <br>
                 Reading Time: 11 min.
             </section>
