--- a/post-one.html
+++ b/post-one.html
@@ -17,7 +17,8 @@
         <hr>
         <main>
             <section class="data">
-                By Chris Shin <br>
+                By Mr. Chris Shin <br>
+                Full-Stack Developer <br>
                 January 14, 2021 <br>
                 Reading Time: 10 min.
             </section>
@@ -116,6 +117,17 @@
                 </span>
                 
             </section>
+            <section>
+                <ul class="social">
+                    <li><a href="https://www.github.com">GitHub</a></li> <span class="separator">|</span> 
+                    <li><a href="https://www.twitter.com">Twitter</a></li> <span class="separator">|</span> 
+                    <li><a href="https://www.facebook.com">Facebook</a></li> <span class="separator">|</span> 
+                    <li><a href="https://www.linkedin.com">LinkedIn</a></li>
+                </ul>
+            </section>
+            <div class="footer box">
+                Copyright 2021
+            </div>
         </main>
     </div>
 </body>
