--- a/post-three.html
+++ b/post-three.html
@@ -18,7 +18,8 @@
         <hr>
         <main>
             <section class="data">
-                By Chris Shin <br>
+                By Mr. Chris Shin <br>
+                Full-Stack Developer <br>
                 June 17, 2021 <br>
                 Reading Time: 7 min.
             </section>
