--- a/post-two.html
+++ b/post-two.html
@@ -18,7 +18,8 @@
         <hr>
         <main>
             <section class="data">
-                By Chris Shin <br>
+                By Mr. Chris Shin <br>
+                Full-Stack Developer <br>
                 February 4, 2021 <br>
                 Reading Time: 5 min.
             </section>
