include captions and typography

--- a/post-one.html
+++ b/post-one.html
@@ -12,6 +12,7 @@
         <header>
             <h1>All About Books</h1>
             <img src="./images/book.png" alt="Book" class="center" />
+            <figcaption class="center-fig">Fig. Image of books</figcaption>
             <a href="index.html" class="main-link">Go Back to Main</a>
         </header>
         <hr>
@@ -26,17 +27,17 @@
                 <h2>Why We Should Read Books</h2>
                 <h3>Subtitle</h3>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    <b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</b> 
                     Nihil alias quos iusto provident temporibus necessitatibus, 
                     deleniti officiis, fuga iure accusamus aliquid quo? 
-                    Excepturi tempora corporis ducimus sed, voluptates 
+                    Excepturi tempora corporis ducimus sed, <em>voluptates</em> 
                     blanditiis beatae!
                 </p>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Nihil alias quos iusto provident temporibus necessitatibus, 
                     deleniti officiis, fuga iure accusamus aliquid quo? 
-                    Excepturi tempora corporis ducimus sed, voluptates 
+                    Excepturi tempora corporis ducimus sed, <em>voluptates</em> 
                     blanditiis beatae!
                 </p>
                 <h3>Subtitle</h3>
@@ -44,7 +45,7 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Nihil alias quos iusto provident temporibus necessitatibus, 
                     deleniti officiis, fuga iure accusamus aliquid quo? 
-                    Excepturi tempora corporis ducimus sed, voluptates 
+                    Excepturi tempora corporis ducimus sed, <u>voluptates</u> 
                     blanditiis beatae!
                 </p>
                 
@@ -57,14 +58,14 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Nihil alias quos iusto provident temporibus necessitatibus, 
                     deleniti officiis, fuga iure accusamus aliquid quo? 
-                    Excepturi tempora corporis ducimus sed, voluptates 
+                    Excepturi tempora corporis ducimus sed, <em>voluptates</em> 
                     blanditiis beatae!
                 </p>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Nihil alias quos iusto provident temporibus necessitatibus, 
                     deleniti officiis, fuga iure accusamus aliquid quo? 
-                    Excepturi tempora corporis ducimus sed, voluptates 
+                    Excepturi tempora corporis ducimus sed, <em>voluptates</em> 
                     blanditiis beatae!
                 </p>
                 <h3>Subtitle</h3>
@@ -99,14 +100,15 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Nihil alias quos iusto provident temporibus necessitatibus, 
                     deleniti officiis, fuga iure accusamus aliquid quo? 
-                    Excepturi tempora corporis ducimus sed, voluptates 
+                    Excepturi tempora corporis ducimus sed, <em>voluptates</em>s 
                     blanditiis beatae!
                 </p>
+                <blockquote>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</blockquote>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Nihil alias quos iusto provident temporibus necessitatibus, 
                     deleniti officiis, fuga iure accusamus aliquid quo? 
-                    Excepturi tempora corporis ducimus sed, voluptates 
+                    Excepturi tempora corporis ducimus sed, <em>voluptates</em> 
                     blanditiis beatae!
                 </p>
             </section>
