--- a/post-four.html
+++ b/post-four.html
@@ -13,6 +13,7 @@
             <h1>All About Dogs</h1>
             
             <img src="./images/dog.jpeg" alt="Dog" class="center" />
+            <figcaption class="center-fig">Fig. Image of dog</figcaption>
             <a href="index.html" class="main-link">Go Back to Main</a>
         </header>
         <hr>
@@ -27,17 +28,17 @@
                 <h2>All About Dogs</h2>
                 <h3>Subtitle</h3>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    <b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</b> 
                     Nihil alias quos iusto provident temporibus necessitatibus, 
                     deleniti officiis, fuga iure accusamus aliquid quo? 
-                    Excepturi tempora corporis ducimus sed, voluptates 
+                    Excepturi tempora corporis ducimus sed, <em>voluptates</em> 
                     blanditiis beatae!
                 </p>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Nihil alias quos iusto provident temporibus necessitatibus, 
                     deleniti officiis, fuga iure accusamus aliquid quo? 
-                    Excepturi tempora corporis ducimus sed, voluptates 
+                    Excepturi tempora corporis ducimus sed, <em>voluptates</em> 
                     blanditiis beatae!
                 </p>
                 <h3>Subtitle</h3>
@@ -45,7 +46,7 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Nihil alias quos iusto provident temporibus necessitatibus, 
                     deleniti officiis, fuga iure accusamus aliquid quo? 
-                    Excepturi tempora corporis ducimus sed, voluptates 
+                    Excepturi tempora corporis ducimus sed, <em>voluptates</em> 
                     blanditiis beatae!
                 </p>
                 
@@ -58,14 +59,14 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Nihil alias quos iusto provident temporibus necessitatibus, 
                     deleniti officiis, fuga iure accusamus aliquid quo? 
-                    Excepturi tempora corporis ducimus sed, voluptates 
+                    Excepturi tempora corporis ducimus sed, <u>voluptates</u> 
                     blanditiis beatae!
                 </p>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Nihil alias quos iusto provident temporibus necessitatibus, 
                     deleniti officiis, fuga iure accusamus aliquid quo? 
-                    Excepturi tempora corporis ducimus sed, voluptates 
+                    Excepturi tempora corporis ducimus sed, <em>voluptates</em> 
                     blanditiis beatae!
                 </p>
                 <h3>Subtitle</h3>
@@ -103,6 +104,7 @@
                     Excepturi tempora corporis ducimus sed, voluptates 
                     blanditiis beatae!
                 </p>
+                <blockquote>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</blockquote>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Nihil alias quos iusto provident temporibus necessitatibus, 
